# hydrophone-deconvolution-multilib

./: .gitignore  AGENT_EXECUTION_GUIDE.md  AGENT_MASTER_PLAN.md  AGENT_TEMPLATES.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: architect.md  explorer.md  implementer.md
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
cpp/: CMakeLists.txt
cpp/include/: deconvolution.hpp  pipeline.hpp
cpp/src/: deconvolution.cpp  pipeline.cpp
cpp/tests/: export_pipeline_result.cpp  export_result.cpp  test_deconvolution.cpp
csharp/: Deconvolution.sln
csharp/Deconvolution/: Core.cs  Deconvolution.csproj  Pipeline.cs
csharp/ExportPipelineResult/: ExportPipelineResult.csproj  Program.cs
csharp/ExportResult/: Program.cs
csharp/Tests/: TestDeconvolution.cs  Tests.csproj
docs/: API_REFERENCE.md  COMPLETION_REPORT.md  CROSS_VALIDATION_REPORT.md  IMPLEMENTATION_NOTES.md
features/: cross_validation.feature  deconvolution.feature  environment.py  pipeline_validation.feature  pulse_parameters.feature  uncertainty.feature
features/steps/: cross_validation_steps.py  deconvolution_steps.py  pipeline_validation_steps.py  pulse_parameters_steps.py
octave/: export_pipeline_result.m  export_result.m
octave/+deconvolution/: amp_phase_to_dft.m  (+13 more)
python/: export_pipeline_result.py  export_result.py  setup.py
qiita/: article_draft.md
reference/: generate_reference.py  patterns.json
rust/: Cargo.toml
test-data/: freq_response_imag.csv  freq_response_real.csv  generate_test_data.py  measured_signal.csv  signal_uncertainty.csv
validation/: compare_pipeline_results.py  compare_results.py  run_cross_validation.py
(+9 files in other folders)
